tdf#125968 fix the result order of text mime info

lcl_textMimeInfo returns three booleans when decoding the text
mime string in the order: NoCharset / locale encoded, UTF16,
and UTF8.

Change-Id: I3cc4090e9874125ed68ec953d7d72889dead269b
Reviewed-on: https://gerrit.libreoffice.org/74183
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins
(cherry picked from commit 3a804b9301cbf68ae583d9f37b0e4e1635e63abe)
Reviewed-on: https://gerrit.libreoffice.org/74207